# ymp

./: .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  Snakefile  TODO  ci_conda_prep.sh  circle.yml  codecov.yml  environment.yaml  fastentrypoints.py  pinned_env.yaml  pyproject.toml  setup.cfg  setup.py  ymp_dependencies.yml
.circleci/: config.yml  setup.sh
.github/: dependabot.yml
doc/: .gitignore  Makefile  api.rst  commandline.rst  conf.py  config.md  config.rst  contents.rst  index.rst  install.rst  requirements.txt  rules.rst  stages.rst
imp/: __init__.py  align.rules  all.rules  assembly.rules  blast.Rmd  blast2gff.py  calc_cov.py  conda.yml  config.py  convert.py  convert.rules  fastq.rules  genepred.rules  gff.py  init.rules  map2otu.py  megahit.yml  merge.py  nuc2aa.py  phony.rules  quast.yml  rrna.rules  snakemake.py  snakemake.py~  tree.rules  util.py
mgp/: all.rules  assembly.rules  blast.py  cmd.py  config.py  convert.py  fastq.rules  fastqc.yml  phony.rules  rrna.rules  snakemake.py  util.py
src/: cache.py
tests/: conftest.py  data.py  test_cache.py  test_cli.py  test_common.py  test_config.py  test_dag.py  test_helpers.py  test_pipeline.py  test_project.py  test_reference.py  test_rules.py  test_snakemake.py  test_stages.py  test_string.py  test_yaml.py
ymp/: __init__.py  __main__.py  _env.py  blast.py  blast2gff.py  calc_cov.py  cluster.py  cmd.py  common.py  config.py  convert.py  coverage.rules  dna.py  env.py  exceptions.py  gff.py  map2otu.py  merge.py  nuc2aa.py  references.py  (+7 more)
(+245 files in other folders)
