[build-system]
requires = [
	 "setuptools>=42",
	 "wheel",
	 "setuptools-scm[toml]>=3.4",
	 "fastentrypoints"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/ymp/_version.py"


[tool.pytest.ini_options]
minversion = "6.0"
python_files = "tests/test_*.py"
python_classes = "*Test"
norecursedirs = "test_failures .git build dist"
junit_suite_name = "ymp"
timeout = 300
addopts = "--capture=fd --cov=ymp --cov-report=xml --cov-report=term"
markers = [
	"runs_tool: tests that run actual tools (take long, run separate)",
]